--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "devDependencies": {
     "@babel/core": "^7.17.10",
     "@babel/plugin-transform-modules-commonjs": "^7.17.9",
+    "eslint": "^7.32.0 || ^8.2.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.2",
     "jest": "^27.5.1"
   }
 }
