--- a/.babelrc
+++ b/.babelrc
@@ -4,4 +4,8 @@
       "plugins": ["@babel/plugin-transform-modules-commonjs"]
     }
   }
+  // "presets":[
+  //   ["@babel/preset-env", {"targets": {"node": "current"}}],
+  //   "@babel/preset-typescript"
+  // ]
 }
