--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "fogex",
-  "version": "0.0.5",
+  "version": "0.0.4",
   "description": "",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "start": "node index",
     "test": "jest",
@@ -35,6 +35,9 @@
     "lint-staged": "^13.2.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.2"
+  },
+  "dependencies": {
+    "tsc": "^2.0.4"
   }
 }
