--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es6",
-    "module": "ESNext",
+    "module": "commonjs",
     "moduleResolution": "node",
     "outDir": "dist",
     "declaration": true,
@@ -15,21 +15,32 @@
     "noUnusedParameters": true,
     "noImplicitAny": true,
     "noImplicitThis": true,
-    "noEmitOnError": true,
-    "noEmit": true,
     "strictNullChecks": true,
     "strictFunctionTypes": true,
     "jsx": "react",
     "isolatedModules": true,
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
-    "types": ["jest", "node"]
+    "types": ["jest", "node"],
+    "baseUrl": "src",
+    "paths": {
+      "@/*": ["src/*"]
+    },
   },
   "ts-node": {
     "esm": true,
     "experimentalSpecifierResolution": "node"
   },
-  "include": ["fogex/**/*.ts","src/**/*.ts", "src/**/*.d.ts", "tests/**/*.ts"],
-  "exclude": ["node_modules"]
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "tests/**/*.ts"],
+  "exclude": ["node_modules", "./test]"]
 }
-
+// {
+//   "compilerOptions": {
+//     "target": "es5",
+//     "module": "commonjs",
+//     "outDir": "./dist",
+//     "strict": true,
+//   },
+//   "include": ["./src/**/*.ts"],  // Sadece src klasöründeki TypeScript dosyalarını dahil et
+//   "exclude": ["./node_modules", "./test"]  // node_modules klasörünü dahil etme
+// }
